--- a/config/eyelash_sofle.conf
+++ b/config/eyelash_sofle.conf
@@ -20,7 +20,9 @@ CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=90
 
-CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=y
+# Automatically turn off underglow after a period of inactivity 30 seconds
+CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_IDLE=n
+
 CONFIG_ZMK_RGB_UNDERGLOW_AUTO_OFF_USB=y
 CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=160
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=3
