--- a/config/west.yml
+++ b/config/west.yml
@@ -67,22 +67,22 @@
 
 
 # LUFFY GEAR FIVE
-manifest:
-  remotes:
-    - name: zmkfirmware
-      url-base: https://github.com/zmkfirmware
-    - name: whoop-t #new entry
-      url-base: https://github.com/whoop-t #new entry
-  projects:
-    - name: zmk
-      remote: zmkfirmware
-      revision: main
-      import: app/west.yml
-    - name: nice-luffy-gear-five #new entry
-      remote: whoop-t #new entry
-      revision: main #new entry
-  self:
-    path: config
+# manifest:
+#   remotes:
+#     - name: zmkfirmware
+#       url-base: https://github.com/zmkfirmware
+#     - name: whoop-t #new entry
+#       url-base: https://github.com/whoop-t #new entry
+#   projects:
+#     - name: zmk
+#       remote: zmkfirmware
+#       revision: main
+#       import: app/west.yml
+#     - name: nice-luffy-gear-five #new entry
+#       remote: whoop-t #new entry
+#       revision: main #new entry
+#   self:
+#     path: config
 
 
 # LUFFY WANTED
@@ -104,3 +104,20 @@ manifest:
 #     path: config
 
 
+# MINIMALISTIC (BATTERY)
+manifest:
+  remotes:
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
+    - name: infely                             # new entry
+      url-base: https://github.com/infely      # new entry
+  projects:
+    - name: zmk
+      remote: zmkfirmware
+      revision: main
+      import: app/west.yml
+    - name: nice-view-battery                  # new entry
+      remote: infely                           # new entry
+      revision: main                           # new entry
+  self:
+    path: config
