--- a/build.yaml
+++ b/build.yaml
@@ -1,16 +1,16 @@
 # GEM
-# include:
-#   - board: eyelash_sofle_left
-#     shield: nice_view_gem
-#   - board: eyelash_sofle_right
-#     shield: nice_view_gem
-#   - board: eyelash_sofle_left
-#     shield: nice_view
-#     snippet: studio-rpc-usb-uart
-#     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
-#     artifact-name: eyelash_sofle_studio_left
-#   - board: eyelash_sofle_left
-#     shield: settings_reset
+include:
+  - board: eyelash_sofle_left
+    shield: nice_view_gem
+  - board: eyelash_sofle_right
+    shield: nice_view_gem
+  - board: eyelash_sofle_left
+    shield: nice_view
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
+    artifact-name: eyelash_sofle_studio_left
+  - board: eyelash_sofle_left
+    shield: settings_reset
 
 
 
@@ -74,15 +74,15 @@
 
 
 # MINIMALISTIC (BATTERY)
-include:
-  - board: nice_nano_v2
-    shield: corne_left nice_view_adapter nice_view_battery  # updated entry
-  - board: nice_nano_v2
-    shield: corne_right nice_view_adapter nice_view_battery # updated entry
-  - board: eyelash_sofle_left
-    shield: nice_view
-    snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
-    artifact-name: eyelash_sofle_studio_left
-  - board: eyelash_sofle_left
-    shield: settings_reset
+# include:
+#   - board: nice_nano_v2
+#     shield: corne_left nice_view_adapter nice_view_battery  # updated entry
+#   - board: nice_nano_v2
+#     shield: corne_right nice_view_adapter nice_view_battery # updated entry
+#   - board: eyelash_sofle_left
+#     shield: nice_view
+#     snippet: studio-rpc-usb-uart
+#     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
+#     artifact-name: eyelash_sofle_studio_left
+#   - board: eyelash_sofle_left
+#     shield: settings_reset
