fix: change corne to eyelash sofle

--- a/build.yaml
+++ b/build.yaml
@@ -1,9 +1,25 @@
 # GEM
+# include:
+#   - board: eyelash_sofle_left
+#     shield: nice_view_gem
+#   - board: eyelash_sofle_right
+#     shield: nice_view_gem
+#   - board: eyelash_sofle_left
+#     shield: nice_view
+#     snippet: studio-rpc-usb-uart
+#     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
+#     artifact-name: eyelash_sofle_studio_left
+#   - board: eyelash_sofle_left
+#     shield: settings_reset
+
+
+
+# GEM 2
 include:
-  - board: eyelash_sofle_left
-    shield: nice_view_gem
-  - board: eyelash_sofle_right
-    shield: nice_view_gem
+  - board: nice_nano_v2
+    shield: eyelash_sofle_right nice_view_adapter nice_epaper
+  - board: nice_nano_v2
+    shield: eyelash_sofle_left nice_view_adapter nice_epaper
   - board: eyelash_sofle_left
     shield: nice_view
     snippet: studio-rpc-usb-uart
@@ -13,28 +29,12 @@ include:
     shield: settings_reset
 
 
-
-# GEM 2
-# include:
-#   - board: nice_nano_v2
-#     shield: corne_left nice_view_adapter nice_epaper
-#   - board: nice_nano_v2
-#     shield: corne_right nice_view_adapter nice_epaper
-  # - board: eyelash_sofle_left
-  #   shield: nice_view
-  #   snippet: studio-rpc-usb-uart
-  #   cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
-  #   artifact-name: eyelash_sofle_studio_left
-  # - board: eyelash_sofle_left
-  #   shield: settings_reset
-
-
 # ONE PUNCH MAN
   # include:
   # - board: nice_nano_v2
-  #   shield: corne_left nice_view_adapter nice_one_punch_ok #update entry
+  #   shield: eyelash_sofle_left nice_view_adapter nice_one_punch_ok #update entry
   # - board: nice_nano_v2
-  #   shield: corne_right nice_view_adapter nice_one_punch_ok #update entry
+  #   shield: eyelash_sofle_right nice_view_adapter nice_one_punch_ok #update entry
   # - board: eyelash_sofle_left
   #   shield: nice_view
   #   snippet: studio-rpc-usb-uart
@@ -46,9 +46,9 @@ include:
 # LUFFY GEAR FIVE
 # include:
 #   - board: nice_nano_v2
-#     shield: corne_left nice_view_adapter nice_luffy_gear_five #update entry
+#     shield: eyelash_sofle_left nice_view_adapter nice_luffy_gear_five #update entry
 #   - board: nice_nano_v2
-#     shield: corne_right nice_view_adapter nice_luffy_gear_five #update entry
+#     shield: eyelash_sofle_right nice_view_adapter nice_luffy_gear_five #update entry
 #   - board: eyelash_sofle_left
 #     shield: nice_view
 #     snippet: studio-rpc-usb-uart
@@ -61,9 +61,9 @@ include:
 # LUFFY WANTED
 # include:
 #   - board: nice_nano_v2
-#     shield: corne_left nice_view_adapter nice_luffy_wanted #update entry
+#     shield: eyelash_sofle_left nice_view_adapter nice_luffy_wanted #update entry
 #   - board: nice_nano_v2
-#     shield: corne_right nice_view_adapter nice_luffy_wanted #update entry
+#     shield: eyelash_sofle_right nice_view_adapter nice_luffy_wanted #update entry
 #   - board: eyelash_sofle_left
 #     shield: nice_view
 #     snippet: studio-rpc-usb-uart
@@ -76,9 +76,9 @@ include:
 # MINIMALISTIC (BATTERY)
 # include:
 #   - board: nice_nano_v2
-#     shield: corne_left nice_view_adapter nice_view_battery  # updated entry
+#     shield: eyelash_sofle_left nice_view_adapter nice_view_battery  # updated entry
 #   - board: nice_nano_v2
-#     shield: corne_right nice_view_adapter nice_view_battery # updated entry
+#     shield: eyelash_sofle_right nice_view_adapter nice_view_battery # updated entry
 #   - board: eyelash_sofle_left
 #     shield: nice_view
 #     snippet: studio-rpc-usb-uart
