feat: add mario theme

--- a/config/west.yml
+++ b/config/west.yml
@@ -47,6 +47,26 @@ manifest:
     path: config
 
 
+#MARIO
+# manifest:
+#   remotes:
+#       # zmk official
+#     - name: zmkfirmware
+#       url-base: https://github.com/zmkfirmware
+#     - name: gpeye                         #new entry
+#       url-base: https://github.com/GPeye  #new entry
+#   projects:
+#     - name: zmk
+#       remote: zmkfirmware
+#       revision: main
+#       import: app/west.yml
+#     - name: mario-peripheral-animation   #new entry
+#       remote: gpeye                       #new entry
+#       revision: main                      #new entry
+#   self:
+#     path: config
+
+
 # ONE PUNCH MAN
 # manifest:
 #   remotes:
