--- a/build.yaml
+++ b/build.yaml
@@ -29,6 +29,21 @@ include:
     shield: settings_reset
 
 
+# MARIO
+# include:
+#   - board: nice_nano_v2
+#     shield: eyelash_sofle_left nice_view_adapter nice_view
+#   - board: nice_nano_v2
+#     shield: eyelash_sofle_right nice_view_adapter nice_view_custom 
+#   - board: eyelash_sofle_left
+#     shield: nice_view
+#     snippet: studio-rpc-usb-uart
+#     cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
+#     artifact-name: eyelash_sofle_studio_left
+#   - board: eyelash_sofle_left
+#     shield: settings_reset
+
+
 # ONE PUNCH MAN
   # include:
   # - board: nice_nano_v2
