--- a/build.yaml
+++ b/build.yaml
@@ -14,21 +14,6 @@
 
 
 
-# GEM 2
-include:
-  - board: nice_nano_v2
-    shield: eyelash_sofle_right nice_view_adapter nice_epaper
-  - board: nice_nano_v2
-    shield: eyelash_sofle_left nice_view_adapter nice_epaper
-  - board: eyelash_sofle_left
-    shield: nice_view
-    snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
-    artifact-name: eyelash_sofle_studio_left
-  - board: eyelash_sofle_left
-    shield: settings_reset
-
-
 # MARIO
 # include:
 #   - board: nice_nano_v2
@@ -45,18 +30,18 @@ include:
 
 
 # ONE PUNCH MAN
-  # include:
-  # - board: nice_nano_v2
-  #   shield: eyelash_sofle_left nice_view_adapter nice_one_punch_ok #update entry
-  # - board: nice_nano_v2
-  #   shield: eyelash_sofle_right nice_view_adapter nice_one_punch_ok #update entry
-  # - board: eyelash_sofle_left
-  #   shield: nice_view
-  #   snippet: studio-rpc-usb-uart
-  #   cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
-  #   artifact-name: eyelash_sofle_studio_left
-  # - board: eyelash_sofle_left
-  #   shield: settings_reset
+  include:
+  - board: nice_nano_v2
+    shield: eyelash_sofle_left nice_view_adapter nice_one_punch_ok #update entry
+  - board: nice_nano_v2
+    shield: eyelash_sofle_right nice_view_adapter nice_one_punch_ok #update entry
+  - board: eyelash_sofle_left
+    shield: nice_view
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y -DCONFIG_ZMK_STUDIO_LOCKING=n
+    artifact-name: eyelash_sofle_studio_left
+  - board: eyelash_sofle_left
+    shield: settings_reset
 
 # LUFFY GEAR FIVE
 # include:
